feat: Implementa funcionalidade para solicitar a comanda do cliente
- Alterações no backend:

  - Adicionado fluxo que permite ao cliente solicitar o fechamento de sua comanda diretamente pela aplicação.

  - Implementação da lógica para notificar o sistema sobre a solicitação.

- Alterações no frontend:

  - Inclusão do botão 'Solicitar Comanda' na tela de consumo.

  - Integração do componente com a nova API de solicitação.