@@ -2,17 +2,19 @@ package com.rb.TableMaster.dto.mapper;
 
 import com.rb.TableMaster.dto.OrderDTO;
 import com.rb.TableMaster.model.Order;
+import com.rb.TableMaster.model.RestaurantTable;
 import com.rb.TableMaster.model.enums.OrderStatus;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Collections;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderMapper {
 
-    private final OrderItemMapper orderItemMapper;
+    public final OrderItemMapper orderItemMapper;
 
     public OrderMapper(OrderItemMapper orderItemMapper) {
         this.orderItemMapper = orderItemMapper;
@@ -33,13 +35,41 @@ public class OrderMapper {
         return new OrderDTO(
                 order.getId(),
                 order.getTable() != null ? order.getTable().getId() : null,
-                order.getTable() != null && order.getTable().getNumber() != 0 ? "Mesa " + order.getTable().getNumber() : null,
+                order.getTable() != null && order.getTable().getNumber() != null ? "Mesa " + order.getTable().getNumber() : null,
                 userCpf,
                 userName,
+
                 order.getItems() != null ?
                         order.getItems().stream()
                                 .map(orderItemMapper::toDTO)
-                                .toList()
+                                .collect(Collectors.toList())
+                        : Collections.emptyList(),
+                order.getCreatedAt(),
+                order.getStatus() != null ? order.getStatus() : OrderStatus.OPEN,
+                order.getTotalValue() != null ? order.getTotalValue() : BigDecimal.ZERO,
+                order.getPaymentMethod(),
+                order.getClosedAt(),
+                order.getReservedTime()
+        );
+    }
+
+    public OrderDTO toDTO(Order order, String userCpf, String userName) {
+        if (order == null) {
+            return null;
+        }
+        RestaurantTable table = order.getTable();
+
+        return new OrderDTO(
+                order.getId(),
+                table != null ? table.getId() : null,
+                table != null && table.getNumber() != null ? "Mesa " + table.getNumber() : null,
+                userCpf,
+                userName,
+                // CORREÇÃO: Mapear items de forma segura também nesta versão
+                order.getItems() != null ?
+                        order.getItems().stream()
+                                .map(orderItemMapper::toDTO)
+                                .collect(Collectors.toList()) // Usar collect(Collectors.toList())
                         : Collections.emptyList(),
                 order.getCreatedAt(),
                 order.getStatus() != null ? order.getStatus() : OrderStatus.OPEN,
